--- a/itis3135/backpackingbuddiescharlotte/admin.html
+++ b/itis3135/backpackingbuddiescharlotte/admin.html
@@ -5,6 +5,7 @@
   <title>Admin Event Manager</title>
 </head>
 <body>
+    <div data-include="components/header.html"></div>
   <h2>Admin Login</h2>
   <input type="password" id="password" placeholder="Enter password" />
   <button onclick="checkPassword()">Login</button>
