--- a/itis3135/backpackingbuddiescharlotte/upcoming.html
+++ b/itis3135/backpackingbuddiescharlotte/upcoming.html
@@ -11,7 +11,32 @@
 
   <div data-include="components/header.html"></div>
       
-  <div id="eventsContainer"></div>
+  <main>
+    <h1>Upcoming Events</h1>
+
+<div class="event">
+    <h2>Hanging Rock Hike</h2>
+    <p class="date">Date: May 17, 2025</p>
+    <p class="location">Location: Hanging Rock State Park North Trailhead</p>
+    <p class="description">Kick off the season with a breathtaking early morning hike to catch the sunrise over the Blue Ridge. This moderate 4-mile trail is perfect for all skill levels. Bring your headlamp, warm layers, and a camera!</p>
+</div>
+
+<div class="event">
+    <h2>Beginner's Day Hike and Gear Workshop</h2>
+    <p class="date">Date: June 7, 2025</p>
+    <p class="location">Location: Uwharrie National Forest Southern Terminus</p>
+    <p class="description">New to hiking? Come along for a relaxed day hike (about 3 miles) followed by a hands-on workshop on essential gear, packing tips, and trail safety. Great for first-timers and anyone looking to brush up on basics.</p>
+</div>
+
+<div class="event">
+    <h2>4-Day Shenandoah Wilderness Trek</h2>
+    <p class="date">Date: August 8–11, 2025</p>
+    <p class="location">Location:Shenandoah National Park</p>
+    <p class="description">Explore the heart of Shenandoah on a four-day, three-night backpacking adventure along a stunning stretch of the Appalachian Trail. We'll cover about 30 miles total, with campsites near scenic overlooks, waterfalls, and peaceful woodlands. This trip is best suited for hikers with some multi-day backpacking experience. Get ready for unforgettable views, starry nights, and great company!</p>
+</div>
+
+<div id="eventsContainer"></div>
+</main>
 
 
     <div data-include="components/footer.html"></div>
