--- a/itis3135/backpackingbuddiescharlotte/upcoming-events.html
+++ b/itis3135/backpackingbuddiescharlotte/upcoming-events.html
@@ -12,6 +12,8 @@
     <main>
         <h1>Upcoming Events</h1>
 
+        <div id="countdown"></div>
+
     <div class="event">
         <h2>Hanging Rock Hike</h2>
         <p class="date">Date: May 17, 2025</p>
@@ -35,6 +37,8 @@
     </main>
     <div data-include="components/footer.html"></div>
     <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
+    <script src="/itis3135/backpackingbuddiescharlotte/scripts/countdown_timer.js"></script>
+
 
 </body>
 </html>
