--- a/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
+++ b/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
@@ -5,16 +5,10 @@
     <title>Gear Checklist - Charlotte Backpacking Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="backpackstyles.css">
-  <style>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+ 
 
-    #gearTable {
-      margin-top: 20px;
-      width: 100%;
-    }
-    input[type="number"] {
-      width: 80px;
-    }
-  </style>
+    
 </head>
 <body>
 
