--- a/itis3135/backpackingbuddiescharlotte/photo-gallery.html
+++ b/itis3135/backpackingbuddiescharlotte/photo-gallery.html
@@ -6,6 +6,7 @@
   <title>Backpacking Buddies Charlotte</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="slides.css">
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
  
 </head>
 <body>
