--- a/itis3135/backpackingbuddiescharlotte/upcoming-events.html
+++ b/itis3135/backpackingbuddiescharlotte/upcoming-events.html
@@ -5,6 +5,7 @@
     <title>Upcoming Events</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="backpackstyles.css">
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
    
 </head>
 <body>
