--- a/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
+++ b/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
@@ -98,7 +98,13 @@
                     <td>Waterproof and breathable preferred</td>
                     <td><input type="checkbox"></td>
                 </tr>
-                
+                <tr>
+                  <td>Camp Flip Flops</td>
+                  <td>Clothing</td>
+                  <td>No</td>
+                  <td>Breathable shoes for when you're at camp</td>
+                  <td><input type="checkbox"></td>
+              </tr>
             </tbody>
         </table>
     
